# Web-form

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  newdbexport.json  pyproject.toml  settings.py  test.http
Web/: __init__.py  api_views.py
